--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Marc Nettles",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarcNettles/MarcNettlesWebsite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MarcNettles/MarcNettlesWebsite/issues"
+  },
+  "homepage": "https://github.com/MarcNettles/MarcNettlesWebsite#readme"
 }
